# python_backend

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  LICENSE  README.md  README_HealthCheck.md  RESTART_FIX_DOCUMENTATION.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: pre-commit.yml
cmake/: TritonPythonBackendConfig.cmake.in
examples/: add_sub.py  add_sub_client.py  config.pbtxt
examples/add_sub/: client.py  model.py
examples/auto_complete/: README.md  batch_config.pbtxt  batch_model.py  client.py  config.pbtxt  model.py  nobatch_config.pbtxt  nobatch_model.py
examples/bls/: README.md  async_client.py  async_model.py  client.py  config.pbtxt  model.py  sync_client.py  sync_model.py
examples/bls_decoupled/: README.md  async_client.py  async_model.py  sync_client.py  sync_model.py
examples/custom_metrics/: README.md  client.py  config.pbtxt  model.py
examples/decoupled/: README.md  repeat_client.py  repeat_config.pbtxt  repeat_model.py  square_client.py  square_config.pbtxt  square_model.py
examples/huggingface_t5_translation/: client.py  config.pbtxt  model.py  requirements.txt
examples/instance_kind/: README.md  client.py  model.py
examples/jax/: README.md  client.py  model.py
examples/preprocessing/: README.md  client.py  model.py  onnx_exporter.py
examples/preprocessing/model_repository/preprocess/: config.pbtxt
examples/preprocessing/resnet50_trt/: README.md  client.py.orig  model.py
examples/pytorch/: client.py  config.pbtxt  model.py
examples/pytorch_platform_handler/: README.md  client.py  config.pbtxt  model.py
examples/resnet50_trt/: README.md  Readme.md  client.py
examples/resnet50_trt/model_repository/ensemble_python_resnet50/: config.pbtxt
examples/resnet50_trt/model_repository/preprocess/: config.pbtxt  model.py
examples/resnet50_trt/model_repository/resnet50_trt/: config.pbtxt
examples/transformer/: client.py  config.pbtxt  model.py
inferentia/: README.md  test_data.json
inferentia/qa/: Dockerfile.QA  setup_test_enviroment_and_test.sh
inferentia/scripts/: Dockerfile.QA  gen_triton_model.py  setup-pre-container-inf2.sh  setup-pre-container.sh  setup-pytorch.sh  setup.sh  setup_test_enviroment_and_test.sh  simple-model.py
inferentia_examples/: README.md
inferentia_examples/scripts/: setup-pytorch.sh
models/category_tensorflow_model/: config.pbtxt
models/category_tensorflow_model/1/model.savedmodel/: fingerprint.pb  saved_model.pb
models/category_tensorflow_model/1/model.savedmodel/variables/: variables.data-00000-of-00001  variables.index
models/test_bls/: config.pbtxt
models/test_bls/1/: model.py
models/test_bls_before/: config.pbtxt
models/test_bls_before/1/: model.py
models/test_take/: config.pbtxt
models/test_take/1/: model.py
src/: bls_decoupled_payload.cc  bls_decoupled_payload.h  correlation_id.cc  correlation_id.h  custom_metrics_registry.cc  custom_metrics_registry.h  gpu_buffers.cc  gpu_buffers.h  infer_payload.cc  infer_payload.h  infer_request.cc  infer_request.h  infer_response.cc  infer_response.h  infer_trace.cc  infer_trace.h  ipc_message.cc  ipc_message.h  memory_manager.cc  memory_manager.h  message_queue.cc  message_queue.h  metric.cc  metric.h  metric_family.cc  metric_family.h  model_context.cc  model_context.h  model_loader.cc  model_loader.h  pb_bls_cancel.cc  pb_cancel.cc  pb_cancel.h  pb_custom_metrics.cc  pb_custom_metrics.h  pb_env.cc  pb_env.h  pb_error.cc  pb_error.h  pb_generator.cc  (+44 more)
src/resources/: startup.py  triton_python_backend_utils.py
src/resources/platform_handlers/pytorch/: README.md  model.py
src/resources/platform_handlers/pytorch_libtorch/: README.md  model.py
src/resources/platform_handlers/tensorflow_savedmodel/: README.md  model.py
src/resources/platform_models/tensorflow_savedmodel/: model.py
src/resources/plugin_models/tensorflow_savedmodel/: model.py
src/shm_monitor/: CMakeLists.txt  shm_monitor.cc
tests/: test_stub_restart.py
